# flutter_aleo_rust_lib

./: .gitignore  README.md  build_curl_for_ios.md  build_xcframework.sh  pubspec.yaml
aleo-rust-archived/: Cargo.toml
aleo-rust-archived/rust/: Cargo.toml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs  test.rs
rust/src/account/: address.rs  encryptor.rs  private_key.rs  private_key_ciphertext.rs  signature.rs  view_key.rs
rust/src/api/: aleo_api.rs  mod.rs  private_key.rs  private_key_api.rs  simple.rs
rust/src/archived_aleo/: aleo_archived_api.rs  mod.rs
rust/src/programs/: execution.rs  macros.rs  mod.rs
rust/src/programs/manager/: deploy.rs  execute.rs  join.rs  mod.rs  split.rs  transfer.rs
rust/src/record/: mod.rs  record_ciphertext.rs  record_plaintext.rs
rust/src/types/: field.rs  native.rs
rust_builder/: CHANGELOG.md  pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_aleo_rust_lib.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_aleo_rust_lib.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+522 files in other folders)
