[package]
name = "rust_lib_flutter_aleo_rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.30"
aleo = {path = "../aleo-rust-archived"}
aleo-rust = {path = "../aleo-rust-archived/rust"}
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.colored]
version = "2"

[dependencies.anyhow]
version = "1.0"
